--- a/2.html
+++ b/2.html
@@ -9,12 +9,13 @@
 <ol>
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
-  <li><a href="3.html"> 유승훈의 업적</a></li>
+  <li><a href="3.html"> 유승훈 사진 모음</a></li>
 </ol>
   <h2> 그의 삶은 어떠했는가? </h2>
 <p> 그는 고등학교 재학시절 지각을 하지 않는게 말이 되지 않는 일이라고 여겨질만큼 지각을 자주했다</p>
 <p> 그는 경험하는 것을 두려워 하지 않는다 </p>
 <p> 그는 25살 처먹도록 제대로 된 여자친구가 없었다 </p>
 <p> 그는 애니를 보는 것을 광기에 서린 듯 즐기며 그에 관련된 게임또한 즐긴다</p>
+
 </body>
 </html>
