--- a/3.html
+++ b/3.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title> 그가 이룬 것들 </title>
+<title> 승훈님의 사진들..!헉 </title>
 <meta charset="utf-8">
 </head>
 <body>
@@ -9,9 +9,9 @@
 <ol>
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
-  <li><a href="3.html"> 유승훈의 업적</a></li>
+  <li><a href="3.html"> 유승훈 사진 모음</a></li>
 </ol>
-<h2> 유승훈의 업적을 알아보자 </h2>
+<h2> 위대한 유승훈 수령님의 사진 모음을 알아보자 </h2>
 <img src="code2.jpg" width="300">
 <img src="code3.jpg" width="300">
 <img src="code4.jpg" width="300">
