--- a/3.html
+++ b/3.html
@@ -18,6 +18,19 @@
 <img src="code5.jpg" width="300">
 <img src="code6.jpg" width="300">
 <img src="code7.jpg" width="300">
+<img src="c1.jpg" width="300">
+<img src="c2.jpg" width="300">
+<img src="c3.jpg" width="300">
+<img src="c4.jpg" width="300">
+<img src="c5.jpg" width="300">
+<img src="c6.jpg" width="300">
+<img src="c7.jpg" width="300">
+<img src="c8.jpg" width="300">
+<img src="c9.jpg" width="300">
+<img src="c10.jpg" width="300">
+<img src="c11.jpg" width="300">
+<img src="c12.jpg" width="300">
+<img src="code.jpg" width="300">
 <h3> 다음에 알아보자....</h3>
 <img src="code8.gif" width="300">
 </body>
