--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </ol>
 <h2><strong>씹오타쿠</strong> 1명을 소개하려고 합니다
 </h2> <h3>바로 <u>유승훈..!</u></h3>
-<img src="code.jpg" width="300">
+<img src="c12.jpg" width="300">
 <p>유승훈은 1995년 7월 18일에 태어났으며 키는 168cm 몸무게 76kg ( 최고기록 87kg )입니다</p> <p>오류초등학교를 거쳐 개봉중학교 , 양천고등학교를 졸업하여 현재 수원과학대학교에 다니고 있습니다.</p>
 <p>그는 지금까지 단 한 번도 <a href="https://ko.wikipedia.org/wiki/%EC%97%AC%EC%9E%90%EC%B9%9C%EA%B5%AC" target="_blank"title="여자친구는 상상속동물?">여자친구</a>를 사귄 적이 없습니다. 이유는!!???</p> <p>유승훈의 팬이라면 아실 것이라 믿습니다.</p>
 <p>스위스로 유학을 갔다와본 경험이 있음 보건소 공익으로 2년 근무</p>
