--- a/3.html
+++ b/3.html
@@ -30,6 +30,18 @@
 <img src="c10.jpg" width="300">
 <img src="c11.jpg" width="300">
 <img src="c12.jpg" width="300">
+<img src="d1.jpg" width="300">
+<img src="d2.jpg" width="300">
+<img src="d3.jpg" width="300">
+<img src="d4.jpg" width="300">
+<img src="d5.jpg" width="300">
+<img src="d6.jpg" width="300">
+<img src="d7.jpg" width="300">
+<img src="d8.jpg" width="300">
+<img src="d9.jpg" width="300">
+<img src="d10.jpg" width="300">
+<img src="d11.jpg" width="300">
+<img src="d12.jpg" width="300">
 <img src="code.jpg" width="300">
 <h3> 다음에 알아보자....</h3>
 <img src="code8.gif" width="300">
