--- a/1.html
+++ b/1.html
@@ -10,6 +10,8 @@
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
   <li><a href="3.html"> 유승훈 사진 모음</a></li>
+  <li><a href="4.html"> 유승훈 Quiz</a></li>
+  <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
 <h2>이 곳은 승훈이의 친구를 소개하는 곳입니다</h2>
  <h3><u>비어있죠?</u> 맞습니다.... 없습니다 ㅠㅠ</h3>
