--- a/2.html
+++ b/2.html
@@ -10,12 +10,17 @@
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
   <li><a href="3.html"> 유승훈 사진 모음</a></li>
+  <li><a href="4.html"> 유승훈 Quiz</a></li>
+  <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
   <h2> 그의 삶은 어떠했는가? </h2>
 <p> 그는 고등학교 재학시절 지각을 하지 않는게 말이 되지 않는 일이라고 여겨질만큼 지각을 자주했다</p>
-<p> 그는 경험하는 것을 두려워 하지 않는다 </p>
+<p> 그는 경험하는 것을 두려워 하지 않는다 좋은 말로 도전적이며 나쁜 말로는 대책이 없다 </p>
 <p> 그는 25살 처먹도록 제대로 된 여자친구가 없었다 </p>
 <p> 그는 애니를 보는 것을 광기에 서린 듯 즐기며 그에 관련된 게임또한 즐긴다</p>
+<p> 고기를 잘 구우며 고기를 좋아함 </p>
+<p> 지금은 피오라 씹장인인데 옛날에는 아트록스,모데카이저 씹장인 다이아3까지 갔었다</p>
+
 
 </body>
 </html>
