--- a/3.html
+++ b/3.html
@@ -10,6 +10,8 @@
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
   <li><a href="3.html"> 유승훈 사진 모음</a></li>
+  <li><a href="4.html"> 유승훈 Quiz</a></li>
+  <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
 <h2> 위대한 유승훈 수령님의 사진 모음을 알아보자 </h2>
 <img src="code2.jpg" width="300">
