--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
   <li><a href="3.html"> 유승훈 사진 모음</a></li>
+  <li><a href="4.html"> 유승훈 Quiz</a></li>
+  <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
 <h2><strong>씹오타쿠</strong> 1명을 소개하려고 합니다
 </h2> <h3>바로 <u>유승훈..!</u></h3>
