--- a/5.html
+++ b/5.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html">퀴즈 정답지</a></h1>
+  <h1><a href="index.html">유승훈</a></h1>
 <ol>
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
