box랑 mediaquery 추가버전 2019/3/2

--- a/2.html
+++ b/2.html
@@ -3,6 +3,50 @@
 <head>
 <title> 유승훈 관종의 삶.. </title>
 <meta charset="utf-8">
+<style>
+
+body{
+  margin:0px
+}
+
+a {
+ color:black;
+ text-decoration: none;
+}
+
+h1 {
+  font-size: 250%;
+  text-align: center;
+  border-bottom:3px solid gray;
+  padding:20px;
+  margin:0px;
+  display:block;
+
+}
+#grid ol {
+  border-right:3px solid gray;
+  width:130px;
+  margin:0px;
+  padding:33px;
+}
+
+#grid{
+ display: grid;
+ grid-template-columns: 200px 1fr;
+}
+
+#article {
+ padding-left: 25px;
+}
+@media(max-width:760px){
+  #grid{
+    display: block;
+  }
+  #grid ol {
+    border-right:none;
+}
+
+</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135462094-1"></script>
 <script>
@@ -16,6 +60,7 @@
 </head>
 <body>
   <h1><a href="index.html">유승훈</a></h1>
+  <div id=grid>
 <ol>
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
@@ -23,6 +68,7 @@
   <li><a href="4.html"> 유승훈 Quiz</a></li>
   <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
+<div id=article>
   <h2> 그의 삶은 어떠했는가? </h2>
 <p> 그는 고등학교 재학시절 지각을 하지 않는게 말이 되지 않는 일이라고 여겨질만큼 지각을 자주했다</p>
 <p> 그는 경험하는 것을 두려워 하지 않는다 좋은 말로 도전적이며 나쁜 말로는 대책이 없다 </p>
@@ -68,5 +114,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+</div>
+</div>
 </body>
 </html>
