--- a/1.html
+++ b/1.html
@@ -3,6 +3,55 @@
 <head>
 <title> 그의 친구는 누구? </title>
 <meta charset="utf-8">
+<style>
+
+  body{
+    margin:0px
+  }
+
+ a {
+   color:black;
+   text-decoration: none;
+ }
+
+ h1 {
+    font-size: 250%;
+    text-align: center;
+    border-bottom:3px solid gray;
+    padding:20px;
+    margin:0px;
+    display:block;
+
+}
+  #grid ol {
+    border-right:3px solid gray;
+    width:130px;
+    margin:0px;
+    padding:33px;
+}
+
+ #grid{
+   display: grid;
+   grid-template-columns: 200px 1fr;
+ }
+
+ #article {
+   padding-left: 25px;
+ }
+
+ #article ol {
+   border:3px solid gray;
+ }
+ @media(max-width:760px){
+   #grid{
+     display: block;
+   }
+   #grid ol {
+     border-right:none;
+ }
+
+
+</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135462094-1"></script>
 <script>
@@ -16,6 +65,7 @@
 </head>
 <body>
   <h1><a href="index.html">유승훈</a></h1>
+  <div id="grid">
 <ol>
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
@@ -23,6 +73,8 @@
   <li><a href="4.html"> 유승훈 Quiz</a></li>
   <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
+
+<div id=article>
 <h2>이 곳은 승훈이의 친구를 소개하는 곳입니다</h2>
  <h3><u>비어있죠?</u> 맞습니다.... 없습니다 ㅠㅠ</h3>
 <p> <strong>장난이구 ㅋㅋㅋ</strong>
@@ -41,6 +93,7 @@
 </ol>
 일단 더 있긴한데 나중에 더쓰는걸로... 링크도 나중에 걸구요...
 </p>
+<p> <font size="6"><strong>댓글에 친구인거 말씀해주시면 추가해드립니다!</strong>   </p>
 <p>
   <div id="disqus_thread"></div>
   <script>
@@ -78,5 +131,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+</div>
+</div>
 </body>
 </html>
