--- a/3.html
+++ b/3.html
@@ -3,6 +3,54 @@
 <head>
 <title> 승훈님의 사진들..!헉 </title>
 <meta charset="utf-8">
+<style>
+
+body{
+  margin:0px
+}
+
+a {
+ color:black;
+ text-decoration: none;
+}
+
+h1 {
+  font-size: 250%;
+  text-align: center;
+  border-bottom:3px solid gray;
+  padding:20px;
+  margin:0px;
+  display:block;
+
+}
+#grid ol {
+  border-right:3px solid gray;
+  width:130px;
+  margin:0px;
+  padding:33px;
+}
+
+#grid{
+ display: grid;
+ grid-template-columns: 200px 1fr;
+}
+
+#article {
+ padding-left: 25px;
+}
+
+#article img {
+  vspace="30" hspace="20"
+}
+
+@media(max-width:760px){
+  #grid{
+    display: block;
+  }
+  #grid ol {
+    border-right:none;
+}
+</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135462094-1"></script>
 <script>
@@ -16,6 +64,7 @@
 </head>
 <body>
   <h1><a href="index.html">유승훈</a></h1>
+  <div id="grid">
 <ol>
   <li><a href="1.html"> 유승훈의 친구</a></li>
   <li><a href="2.html"> 유승훈의 삶</a></li>
@@ -23,6 +72,7 @@
   <li><a href="4.html"> 유승훈 Quiz</a></li>
   <li><a href="5.html"> Quiz 정답</a></li>
 </ol>
+<div id=article>
 <h2> 위대한 유승훈 수령님의 사진 모음을 알아보자 </h2>
 <img src="code2.jpg" width="300">
 <img src="code4.jpg" width="300">
@@ -93,5 +143,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+</div>
+</div>
 </body>
 </html>
