--- a/index.html
+++ b/index.html
@@ -3,6 +3,50 @@
 <head>
 <title> welcome 그는 누구인가? </title>
 <meta charset="utf-8">
+<style>
+
+  body{
+    margin:0px
+  }
+
+ a {
+   color:black;
+   text-decoration: none;
+ }
+
+ h1 {
+    font-size: 250%;
+    text-align: center;
+    border-bottom:3px solid gray;
+    padding:20px;
+    margin:0px;
+    display:block;
+
+}
+  #grid ol {
+    border-right:3px solid gray;
+    width:130px;
+    margin:0px;
+    padding:33px;
+}
+
+ #grid{
+   display: grid;
+   grid-template-columns: 200px 1fr;
+ }
+
+ #article {
+   padding-left: 25px;
+ }
+ @media(max-width:760px){
+   #grid{
+     display: block;
+   }
+   #grid ol {
+     border-right:none;
+ }
+
+</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135462094-1"></script>
 <script>
@@ -15,14 +59,17 @@
 
 </head>
 <body>
-  <h1><a href="index.html">유승훈</a></h1>
-<ol>
-  <li><a href="1.html"> 유승훈의 친구</a></li>
-  <li><a href="2.html"> 유승훈의 삶</a></li>
-  <li><a href="3.html"> 유승훈 사진 모음</a></li>
-  <li><a href="4.html"> 유승훈 Quiz</a></li>
-  <li><a href="5.html"> Quiz 정답</a></li>
-</ol>
+  <h1><a href="index.html" >유승훈</a></h1>
+<div id="grid">
+  <ol>
+    <li><a href="1.html" > 유승훈의 친구</a></li>
+    <li><a href="2.html" > 유승훈의 삶</a></li>
+    <li><a href="3.html" > 유승훈 사진 모음</a></li>
+    <li><a href="4.html" > 유승훈 Quiz</a></li>
+    <li><a href="5.html" > Quiz 정답</a></li>
+  </ol>
+
+<div id="article">
 <h2><strong>씹오타쿠</strong> 1명을 소개하려고 합니다
 </h2> <h3>바로 <u>유승훈..!</u></h3>
 <img src="c12.jpg" width="300">
@@ -69,5 +116,7 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+  </div>
+</div>
 </body>
 </html>
