--- a/3.html
+++ b/3.html
@@ -3,54 +3,8 @@
 <head>
 <title> 승훈님의 사진들..!헉 </title>
 <meta charset="utf-8">
-<style>
+<link rel="stylesheet" href="style.css">
 
-body{
-  margin:0px
-}
-
-a {
- color:black;
- text-decoration: none;
-}
-
-h1 {
-  font-size: 250%;
-  text-align: center;
-  border-bottom:3px solid gray;
-  padding:20px;
-  margin:0px;
-  display:block;
-
-}
-#grid ol {
-  border-right:3px solid gray;
-  width:130px;
-  margin:0px;
-  padding:33px;
-}
-
-#grid{
- display: grid;
- grid-template-columns: 200px 1fr;
-}
-
-#article {
- padding-left: 25px;
-}
-
-#article img {
-  vspace="30" hspace="20"
-}
-
-@media(max-width:760px){
-  #grid{
-    display: block;
-  }
-  #grid ol {
-    border-right:none;
-}
-</style>
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135462094-1"></script>
 <script>
