--- a/index.html
+++ b/index.html
@@ -18,6 +18,18 @@
 </head>
 <body>
   <h1><a href="index.html" >유승훈</a></h1>
+  <input id="night_day" type="button" value="주간모드" onclick="
+    if( document.querySelector('#night_day').value === '야간모드'){
+    document.querySelector('body').style.backgroundColor = 'black';
+    document.querySelector('body').style.color = 'white';
+    document.querySelector('#night_day').value = '주간모드';
+    }
+    else{
+    document.querySelector('body').style.backgroundColor = 'white';
+    document.querySelector('body').style.color = 'black';
+    document.querySelector('#night_day').value = '야간모드';
+}
+  ">
 <div id="grid">
   <ol>
     <li><a href="1.html" > 유승훈의 친구</a></li>
