--- a/index.html
+++ b/index.html
@@ -18,20 +18,37 @@
 </head>
 <body>
   <h1><a href="index.html" >유승훈</a></h1>
-  <input id="night_day" type="button" value="주간모드" onclick="
-    if( document.querySelector('#night_day').value === '야간모드'){
-    document.querySelector('body').style.backgroundColor = 'black';
-    document.querySelector('body').style.color = 'white';
-    document.querySelector('#night_day').value = '주간모드';
-    }
-    else{
-    document.querySelector('body').style.backgroundColor = 'white';
-    document.querySelector('body').style.color = 'black';
-    document.querySelector('#night_day').value = '야간모드';
+  <input type="button" value="주간모드" onclick="
+  var target = document.querySelector('body');
+  if(this.value === '야간모드'){
+    target.style.backgroundColor = 'black';
+    target.style.color = 'white';
+    this.value = '주간모드';
+    var alist = document.querySelectorAll('a')
+    var i=0;
+    while(i<alist.length){
+    (alist[i]);
+    alist[i].style.color = 'powderblue';
+    i = i + 1;
+  }
+  }
+
+  else{
+    target.style.backgroundColor = 'white';
+    target.style.color = 'black';
+    this.value = '야간모드';
+    var alist = document.querySelectorAll('a')
+    var i=0;
+    while(i<alist.length){
+    (alist[i]);
+    alist[i].style.color = 'blue';
+    i = i + 1;
 }
+}
+
   ">
-<div id="grid">
-  <ol>
+  <div id="grid">
+    <ol>
     <li><a href="1.html" > 유승훈의 친구</a></li>
     <li><a href="2.html" > 유승훈의 삶</a></li>
     <li><a href="3.html" > 유승훈 사진 모음</a></li>
